refactor: 重构 Main 类和 EndToEndIntegrationTest，优化导入顺序，增强代码可读性；更新 WebSocketIntegrationTest，简化消息处理逻辑，提升测试稳定性；改进 Location 类，添加 @JsonIgnore 注解以优化 JSON 序列化；更新 Engine 类，确保命令 ID 生成逻辑的一致性，增强消息处理的健壮性。